# RampOS

./: .env.example  .gitignore  .openapi-spec-hash  AUDIT_REPORT_COMPLIANCE.md  AUDIT_REPORT_CONTRACTS.md  AUDIT_REPORT_INFRASTRUCTURE.md  BAO_CAO_AUDIT_TONG_HOP.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FINAL_STATUS_REPORT.md  LICENSE  NEXT-GEN-MASTER-PLAN.md  NEXT-GEN-ROADMAP.md  PHASES.md  PRODUCTION_READINESS_REPORT.md  PROGRESS.md  RAMPOS_COMPREHENSIVE_REVIEW.md  README.md  README.vi.md  RELEASE_NOTES.md  SECURITY_AUDIT_FINAL_2026-02-03.md  SECURITY_REMEDIATION.md  TASK-TRACKER.md  clippy_log.txt  config.toml  content_script.md  context.md  docker-compose.yml  error_log.txt  integration_report.md  package-lock.json  replacements.txt  verify_docker.sh  verify_isolation.py
.claude/: CLAUDE.md  (+6 more)
crates/ramp-aa/: Cargo.toml
crates/ramp-aa/src/: bundler.rs  custody_signer.rs  gas.rs  lib.rs  paymaster.rs  policy.rs  smart_account.rs  types.rs  user_operation.rs
crates/ramp-aa/src/eip7702/: authorization.rs  delegation.rs  mod.rs  transaction.rs
crates/ramp-aa/src/passkey/: mod.rs  signer.rs
crates/ramp-aa/src/paymaster/: base.rs  cross_chain.rs  mod.rs  multi_token.rs
crates/ramp-aa/tests/: aa_tests.rs
crates/ramp-adapter/: Cargo.toml
crates/ramp-adapter/src/: factory.rs  lib.rs  napas_offramp.rs  traits.rs  types.rs  vietqr_offramp.rs
crates/ramp-adapter/src/adapters/: mock.rs  mod.rs  napas.rs  vietqr.rs
crates/ramp-adapter/tests/: adapter_tests.rs
crates/ramp-api/: Cargo.bin.toml  Cargo.toml
crates/ramp-api/src/: dto.rs  error.rs  extract.rs  extract_test.rs  lib.rs  main.rs  openapi.rs  providers.rs  router.rs
crates/ramp-api/src/graphql/: loaders.rs  mod.rs  mutation.rs  pagination.rs  query.rs  subscription.rs  tests.rs  types.rs
crates/ramp-api/src/handlers/: aa.rs  balance.rs  bank_webhooks.rs  chain.rs  custody.rs  domain.rs  health.rs  intent.rs  mod.rs  payin.rs  payout.rs  stablecoin.rs  swap.rs  trade.rs  ws.rs
crates/ramp-api/src/middleware/: auth.rs  billing.rs  error_sanitizer.rs  idempotency.rs  mod.rs  portal_auth.rs  rate_limit.rs  rate_limit_test.rs  request_id.rs  tenant.rs  tiered_rate_limit.rs  versioning.rs
crates/ramp-api/src/versioning/: mod.rs  transformers.rs  version.rs
crates/ramp-api/tests/: admin_security_regression_test.rs  api_tests.rs  chain_abstraction_test.rs  config_bundle_test.rs  cookie_auth_tests.rs  e2e_flows.rs  e2e_offramp_test.rs  e2e_payin.rs  e2e_payin_test.rs  e2e_payout_test.rs  e2e_tests.rs  graphql_runtime_tests.rs  graphql_subscription_e2e_test.rs  hmac_tests.rs  idempotency_check.rs  incidents_admin_test.rs  integration_tests.rs  intent_tests.rs  kyb_admin_test.rs  liquidity_admin_test.rs  net_settlement_admin_test.rs  openapi_completeness_test.rs  partner_registry_test.rs  passport_admin_test.rs  portal_api_tests.rs  portal_auth_tests.rs  portal_tests.rs  rate_limit_e2e_test.rs  rate_limit_integration_tests.rs  reconciliation_admin_test.rs  rescreening_admin_test.rs  sandbox_admin_test.rs  security_tests.rs  travel_rule_admin_test.rs  treasury_admin_test.rs  versioning_deprecation_e2e_test.rs  versioning_e2e_test.rs  versioning_tests.rs  webhook_admin_test.rs
crates/ramp-common/: Cargo.toml
crates/ramp-common/src/: crypto.rs  error.rs  intent.rs  intent_test.rs  ledger.rs  lib.rs  licensing.rs  resilience.rs  telemetry.rs  types.rs
crates/ramp-common/src/tests/: error_test.rs  ledger_test.rs  mod.rs  serialization_test.rs
crates/ramp-compliance/: Cargo.toml
crates/ramp-compliance/fuzz/: Cargo.toml
crates/ramp-compliance/fuzz/fuzz_targets/: rule_parser_target.rs
crates/ramp-compliance/migrations/: 20240924120000_create_compliance_cases.sql
crates/ramp-compliance/migrations/down/: 20240924120000_create_compliance_cases_down.sql
crates/ramp-compliance/src/: actions.rs  aml.rs  case.rs  history.rs  kyt.rs  lib.rs  passport.rs  provider_routing.rs  reconciliation.rs  rescreening.rs  risk_graph.rs  risk_lab.rs  rule_parser.rs  rules.rs  sanctions_test.rs  transaction_history.rs  types.rs  withdraw_policy.rs
crates/ramp-compliance/src/aml/: device_anomaly.rs
crates/ramp-compliance/src/case/: notes.rs  notes_tests.rs
crates/ramp-compliance/src/config/: mod.rs  providers.rs  sanctions.rs  thresholds.rs
crates/ramp-compliance/src/documents/: mod.rs  types.rs
crates/ramp-compliance/src/fraud/: analytics.rs  decision.rs  features.rs  mod.rs  scorer.rs
crates/ramp-compliance/tests/: ctr_test.rs  fraud_acceptance_test.rs  fuzz_simulation.rs  integration_tests.rs  kyb_graph_test.rs  kyc_passport_test.rs  recon_test.rs  rescreening_test.rs  risk_graph_test.rs  risk_lab_replay_test.rs  travel_rule_exchange_test.rs  travel_rule_policy_test.rs
crates/ramp-core/: Cargo.toml
crates/ramp-core/src/: config.rs  event.rs  lib.rs  state_machine.rs  temporal_worker.rs  test_utils.rs  workflow_engine.rs
crates/ramp-core/tests/: chain_multi_adapter_e2e_test.rs  corridor_pack_repository_test.rs  corridor_pack_service_test.rs  incident_timeline_e2e_test.rs  liquidity_policy_test.rs  liquidity_reliability_test.rs  net_settlement_test.rs  offramp_payout_e2e_test.rs  passkey_webauthn_e2e_test.rs  payment_method_capability_service_test.rs  reconciliation_export_test.rs  reconciliation_workbench_test.rs  replay_export_test.rs  sandbox_fixture_test.rs  sandbox_replay_e2e_test.rs  settlement_e2e_test.rs  sla_guardian_test.rs  treasury_service_test.rs  webhook_config_e2e_test.rs  webhook_delivery_e2e_test.rs
sdk-python/: README.md  pyproject.toml
sdk-python/src/rampos/: __init__.py  client.py  exceptions.py
sdk-python/tests/: conftest.py  test_aa.py  test_cli_certification.py  test_cli_compatibility_gate.py  test_cli_config.py  test_cli_coverage_ledger.py  test_cli_dynamic_commands.py  test_cli_entrypoint.py  test_cli_errors.py  test_cli_generated_commands.py  test_cli_manifest.py  test_cli_openapi_drift.py  test_cli_output.py  test_client.py  test_hmac.py  test_intents.py  test_ledger.py  test_models.py  test_new_services.py  test_passkey.py  test_users.py  test_webhook.py
(+2437 files in other folders)
