[package]
name = "ramp-aa"
version.workspace = true
edition.workspace = true

[dependencies]
ramp-common = { path = "../ramp-common" }
ramp-core = { path = "../ramp-core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

alloy = { workspace = true }
hex = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
hmac = { workspace = true }
sha2 = { workspace = true }
rlp = "0.5"

# ECDSA signing for ERC-4337 paymaster (secp256k1)
# Note: "ecdsa" feature includes recoverable signatures with RecoveryId
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
