[package]
name = "ramp-adapter"
version.workspace = true
edition.workspace = true

[dependencies]
ramp-common = { path = "../ramp-common" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# HTTP client for real API calls
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"], default-features = false }

# Cryptographic functions for signature verification
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rsa = { version = "0.9", features = ["sha2"] }

# Random number generation for mock adapter
rand = "0.8"

# QR code generation
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"

# For configurable retry and timeout
backoff = { version = "0.4", features = ["tokio"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
rust_decimal_macros = "1"
