[package]
name = "ramp-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rampos-server"
path = "src/main.rs"

[dependencies]
ramp-common = { path = "../ramp-common" }
ramp-core = { path = "../ramp-core" }
ramp-compliance = { path = "../ramp-compliance" }

tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

sqlx = { workspace = true }
validator = { workspace = true }
redis = { workspace = true }

# OpenAPI documentation
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

[dev-dependencies]
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres", "redis"] }
reqwest = { version = "0.11", features = ["json"] }

