[package]
name = "ramp-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rampos-server"
path = "src/main.rs"

[features]
default = []
nats = ["ramp-core/nats"]

[dependencies]
ramp-common = { path = "../ramp-common" }
ramp-core = { path = "../ramp-core" }
ramp-compliance = { path = "../ramp-compliance" }
ramp-aa = { path = "../ramp-aa" }

alloy = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["sensitive-headers", "set-header"] }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

sqlx = { workspace = true }
validator = { workspace = true }
redis = { workspace = true }

# Auth dependencies
rand = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
time = { workspace = true }
argon2 = { workspace = true }

# HMAC signature verification
hmac = "0.12"
subtle = "2.5"
http-body-util = "0.1"
futures = "0.3"

# OpenAPI documentation
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# GraphQL
async-graphql = { version = "7", features = ["dataloader", "chrono", "decimal"] }
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres", "redis"] }
reqwest = { version = "0.11", features = ["json"] }
rust_decimal_macros = "1.33"
tower = { version = "0.4", features = ["util"] }
futures = "0.3"
