[package]
name = "ramp-compliance"
version.workspace = true
edition.workspace = true

[dependencies]
ramp-common = { path = "../ramp-common" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }
redis = { workspace = true, features = ["tokio-comp"] }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
csv = "1.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["macros"] }
