[package]
name = "ramp-core"
version.workspace = true
edition.workspace = true

[features]
default = []
nats = ["async-nats"]
# Enable full HTTP client for webhook delivery (requires gcc on Windows for rustls)
http-client = []

[dependencies]
ramp-common = { path = "../ramp-common" }
ramp-compliance = { path = "../ramp-compliance" }
ramp-adapter = { path = "../ramp-adapter" }
ramp-ledger = { path = "../ramp-ledger" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
hex = { workspace = true }
aes-gcm = { workspace = true }

# Ethereum/EVM support
alloy = { workspace = true }

sqlx = { workspace = true }
redis = { workspace = true }
futures = "0.3"

# Optional dependencies (require additional tooling on Windows)
async-nats = { workspace = true, optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2.workspace = true
rand.workspace = true
subtle = "2.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
urlencoding = "2.1"
hickory-resolver = { workspace = true }

# XML signature verification for SAML
ring = "0.17"
pem = "3.0"
sha1 = "0.10"

# ACME / Let's Encrypt SSL provisioning
instant-acme = { version = "0.7", default-features = false, features = ["hyper-rustls", "ring"] }
rcgen = "0.13"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
rust_decimal_macros = "1.33"
wiremock = "0.6.5"
mockall = "0.14.0"
